--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.41.2",
-    "@types/node": "^20.11.19"
+    "@types/node": "^20.11.19",
+    "sass": "^1.71.0"
   }
 }
